/*
 * @Date: 2023-01-19 22:05:18
 * @LastEditors: zhang zhao
 * @LastEditTime: 2023-02-03 10:22:18
 * @FilePath: /simple-DY/DY-srvs/video-srv/proto/video.proto
 * @Description: protobuf定义
 */
 
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative video.proto

syntax = "proto3";

package proto;

option go_package = "./;proto";


message Video{
    int64 id = 1; // 视频唯一标识​
    User author = 2; // 视频作者信息​
    string play_url = 3; // 视频播放地址​
    string cover_url = 4; // 视频封面地址​
    int64 favorite_count = 5; // 视频的点赞总数​
    int64 comment_count = 6; // 视频的评论总数​
    bool is_favorite = 7; // true-已点赞，false-未点赞​
    string title = 8; // 视频标题​
}

message User{
    int64 id = 1; // 用户id​
    string name = 2; // 用户名称​
    int64 follow_count = 3; // 关注总数​
    int64 follower_count = 4; // 粉丝总数​
    bool is_follow = 5; // true-已关注，false-未关注​
}

// 1.1 视频流接口
service Feed {
    rpc Feed (douyin_feed_request) returns (douyin_feed_response) {}
}

message douyin_feed_request{
    int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间​
    string token = 2;  // 可选参数，登录用户设置​
}

message douyin_feed_response{
    int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    string status_msg = 2; // 返回状态描述​
    repeated Video video_list = 3; // 视频列表​
    int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time​
}

// 1.2.1 视频发布列表
service PublishList {
    rpc PublishList (douyin_publish_list_request) returns (douyin_publish_list_response) {}
}

message douyin_publish_list_request{
    int64 user_id = 1; // 用户id​
    string token = 2; // 用户鉴权token​
}

message douyin_publish_list_response{
    int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    string status_msg = 2; // 返回状态描述​
    repeated Video video_list = 3; // 用户发布的视频列表​
}

// 1.2.2 投稿接口
service PublishAction {
    rpc PublishAction (douyin_publish_action_request) returns (douyin_publish_action_response) {}
}

message douyin_publish_action_request{
    string token = 1; // 用户鉴权token​
    bytes data = 2; // 视频数据
    string title = 3; // 视频标题​
}

message douyin_publish_action_response{
    int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    string status_msg = 2; // 返回状态描述​
}

// 1.3.1 用户信息

service UserInfo {
    rpc UserInfo (douyin_user_request) returns (douyin_user_response) {}
}

message douyin_user_request{
    int64 user_id = 1; // 用户id​
    string token = 2; // 用户鉴权token​
}

message douyin_user_response{
    int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    string status_msg = 2; // 返回状态描述​
    User user = 3; // 用户信息​
}



// 1.3.2 用户注册

service UserRegister {
    rpc UserRegister (douyin_user_register_request) returns (douyin_user_register_response) {}
}

message douyin_user_register_request{
    string username = 1; // 注册用户名，最长32个字符​
    string password = 2; // 密码，最长32个字符​
}

message douyin_user_register_response{
    int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    string status_msg = 2; // 返回状态描述​
    int64 user_id = 3; // 用户id​
    string token = 4; // 用户鉴权token​
}

// 1.3.3 用户登录

service UserLogin {
    rpc UserLogin (douyin_user_login_request) returns (douyin_user_login_response) {}
}

message douyin_user_login_request{
    string username = 1; // 登录用户名​
    string password = 2; // 登录密码​
}

message douyin_user_login_response{
    int32 status_code = 1; // 状态码，0-成功，其他值-失败​
    string status_msg = 2; // 返回状态描述​
    int64 user_id = 3; // 用户id​
    string token = 4; // 用户鉴权token​
}
